--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="learn.css".css">
+    <link rel="stylesheet" href="learn.css">
 </head>
 <body>
     <div class="main">
@@ -16,7 +16,7 @@
             <li></li>
             <li></li>
         </div>
-        <a class="back" href="../index.html">Back to Compilation</a>
+        <a class="back" href="https://jaysonfidiles.github.io/intros/">Back to Compilation</a>
     </div>
 
 </body>
